# quantitative_finance

./: .gitignore  README.md
Actuarial/: Kaplan-Meier Filter.ipynb
Derivatives/: European Option Greeks.ipynb  OptionsFromCpp.ipynb  OptionsStrategiesPayoffs.ipynb  README.md
Derivatives/Options/: option_interface.i
Derivatives/Options/Options/: Options.cpp  Options.h  boost_x64_release.props
Derivatives/c++/Options/: Options.sln
Derivatives/c++/Options/Options/: European.cpp  Options.cpp  Options.h  Options.vcxproj  Options.vcxproj.filters
Derivatives/src/: CMakeLists.txt  Options.cpp  Options.h  Options.i  Options.py  setup.py
InterestRate/ZeroCoupon/: Nelson_and_Siegel.ipynb  bonds_free_risk.xlsx
InterestRate/ZeroCoupon/.ipynb_checkpoints/: Nelson_and_Siegel-checkpoint.ipynb
LLM/mcp-server/: README.md  VaR_validation.ipynb  pyproject.toml  requirements.txt  server.py
LLM/mcp-server/datasource/: RGTI_193552.csv  RGTI_20250815_004623.csv
LLM/mcp-server/my_var/: utils.py  var.py
PortfolioTheory/: Markowitz.ipynb
Risk/Market/VaR/: CornishFisher_VaR.ipynb  EVT_ExtremeValueTheory.ipynb  Modified_CornishFisher.ipynb
Simulation/Monte_Carlo/: Monte Carlo.ipynb  ProbabilityDistRandomNumbersGenerator.ipynb
Stochastic/: 01_random_walk.ipynb  02_HurstExponent.ipynb  03_GeometricBrownianMotion.ipynb  04_BrownianBridge.ipynb  GBM.ipynb
Stochastic/01_fundamentals/: 01_quadratic_variation_BM.ipynb
Technical_issues/ForecastingMisconceptions/: AbdelkarimCase.ipynb
Technical_issues/Rust/: rust_FactorialTime.ipynb
Technical_issues/Swig/: Swig C and Python.ipynb  _example.cp38-win_amd64.pyd  example.c  example.h  example.i  example.py  example_wrap.c  setup.py
(+3 files in other folders)
